--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cerium",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "npx tsx src/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
